@@ -1,1 +1,8 @@
 <img width="1724" height="744" alt="image" src="https://github.com/user-attachments/assets/36e1be66-8ef6-4d56-adc9-cbd9e3fc05f0" />
+
+
+## Testing
+
+`javac --add-modules jdk.httpserver -encoding UTF-8 Advisor.java`
+
+`java --add-modules jdk.httpserver -cp . Advisor`
